@@ -127,7 +127,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>3.2.5</version>
+                    <version>3.0.0-M5</version>
                     <configuration>
                         <parallel>methods</parallel>
                         <threadCount>12</threadCount>  <!-- Burada kaç tane thread çalıştırılacak belirtilir -->
@@ -150,7 +150,7 @@
                     <version>3.2.2</version>
                     <configuration>
                         <testFailureIgnore>true</testFailureIgnore>
-
+                        <skipTests>false</skipTests>
                         <includes>
                             <include>**/runners.RunnerAPI</include>
                         </includes>
@@ -162,87 +162,13 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.11.0</version>
                     <configuration>
-                        <source>21</source>
-                        <target>21</target>
+                        <source>1.8</source>
+                        <target>1.8</target>
                     </configuration>
                 </plugin>
             </plugins>
         </build>
     </profile>
-        <profile>
-            <id>RunnerSmoke</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>net.masterthought</groupId>
-                        <artifactId>maven-cucumber-reporting</artifactId>
-                        <version>5.7.7</version>
-                        <executions>
-                            <execution>
-                                <id>execution</id>
-                                <phase>verify</phase>
-                                <goals>
-                                    <goal>generate</goal>
-                                </goals>
-                                <configuration>
-                                    <projectName>cucumber-jvm-example</projectName>
-                                    <outputDirectory>${project.build.directory}</outputDirectory>
-                                    <inputDirectory>${project.build.directory}</inputDirectory>
-                                    <jsonFiles>
-                                        <param>**/json-reports/*.json</param>
-                                    </jsonFiles><classificationFiles>->
-                                    <param>sample.properties</param>
-                                    <param>other.properties</param>
-                                </classificationFiles>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>3.2.5</version>
-                        <configuration>
-                            <parallel>methods</parallel>
-                            <threadCount>12</threadCount>  <!-- Burada kaç tane thread çalıştırılacak belirtilir -->
-                            <reuseForks>false</reuseForks>
-                            <argLine>-Duser.language=en</argLine>
-                            <argLine>-Xmx1024m</argLine>
-                            <argLine>-XX:MaxPermSize=256m</argLine>
-                            <argLine>-Dfile.encoding=UTF-8</argLine>
-                            <useFile>false</useFile>
-                            <includes>
-                                <include>runners.RunnerSmoke</include> <!-- Burada çalışacak Runner class belirtilir -->
-                            </includes>
-                            <testFailureIgnore>true</testFailureIgnore>
-                        </configuration>
-                    </plugin>
-                    <!--Failsafe plugin-->
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-failsafe-plugin</artifactId>
-                        <version>3.2.2</version>
-                        <configuration>
-                            <testFailureIgnore>true</testFailureIgnore>
-
-                            <includes>
-                                <include>**/runners.RunnerSmoke</include>
-                            </includes>
-                        </configuration>
-                    </plugin>
-
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <version>3.11.0</version>
-                        <configuration>
-                            <source>21</source>
-                            <target>21</target>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
     </profiles>
 
 </project>
